--- a/src/components/base/Base.css
+++ b/src/components/base/Base.css
@@ -51,6 +51,14 @@
   opacity: 0.7;
 }
 
+.hero .button_container {
+  display: none;
+}
+
+.hero .social_buttons {
+  display: none;
+}
+
 nav {
   display: flex;
   flex-direction: column;
